se generaron variables antes de los maps

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-.vscode
-gitignore
+vscode/
+gitignore/
 node_modules/
+package-lock.json/
+package.json/
+
 
 git remote add origin https://github.com/dinciarte/Ariadne_BS.git
 git branch -M main
-git push -u origin main
+git push -u origin main 
