--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 vscode/
-gitignore/
+.gitignore/
 node_modules/
 package-lock.json/
 package.json/
 
 
-git remote add origin https://github.com/dinciarte/Ariadne_BS.git
+git remote add origin https://github.com/dinciarte/Ariadne-Crochet.git
 git branch -M main
 git push -u origin main 
